<resources>
    <string name="app_name">taxiApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="login">Login</string>
    <string name="sign_up">Need to create an account? Sign up here</string>
    <string name="pick_up_address">Pick Up Address</string>
    <string name="destination_address">Destination</string>
    <string name="book_now">Book Now</string>
    <string name="search_image">Search Image</string>
    <string name="enter_address">Enter Address</string>
    <string name="device_location">Device Location</string>
    <string name="personal_details">Personal Details</string>
    <string name="choose_dest">Choose Destination</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="gps_loc">Current Location</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_full_name">Enter Full Name</string>
    <string name="enter_your_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_your_phone">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="edit_label">edit</string>
    <string name="invisible_space">" "</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="apply_label">apply</string>
    <string name="confirm">Confirm</string>

    <string name="database_user_name">userName</string>
    <string name="database_first_name">firstName</string>
    <string name="database_last_name">lastName</string>
    <string name="database_uid">uid</string>
    <string name="database_phone_number">phoneNumber</string>
    <string name="database_email">email</string>
    <string name="database_date_of_birth">dateOfBirth</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="gps_image">gps image</string>
    <string name="facebook_app_id">1040936159431572</string>
    <string name="fb_login_protocol_scheme">fb1040936159431572</string>
    <string name="enter_card_no">Card Number</string>
    <string name="database_card_no">cardNo</string>
    <string name="enter_expiry_date">Expiry Date</string>
    <string name="database_expiry_date">expiryDate</string>
    <string name="logout">Logout</string>
    <string name="review">Rate and Review</string>
    <string name="user_rate">Your rate:</string>
    <string name="base_rate">5</string>
    <string name="user_review">Leave Review:</string>
    <string name="send">Send</string>
    <string name="enter_destination_address">Enter Destination Address</string>
    <string name="enter_pickup_address">Enter Pickup Address</string>
    <string name="pay_now">Pay Now</string>
    <string name="history">History</string>
    <string name="show">Show</string>
    <string name="from">From:</string>
    <string name="test">TEST</string>
    <string name="to">To:</string>
    <string name="date_and_time">Date:</string>
    <string name="cost">Cost:</string>
    <string name="close">close</string>
    <string name="enter_review">Enter review:</string>
    <string name="reviews">Reviews</string>
    <string name="refresh">Refresh</string>
    <string name="read_reviews">Read Reviews</string>


</resources>
