<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    tools:context=".activities.ReviewActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/review"
        android:textSize="24sp" />

    <SeekBar
        android:id="@+id/mySeekBar"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:max="4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_rate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rateTextView"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:gravity="center"
        android:text="@string/base_rate"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_review"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/reviewEditText"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:background="@drawable/back" />

    <Button
        android:id="@+id/reviewSendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />

</LinearLayout>