<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserDetailsActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/userNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="@drawable/white_border">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/user_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@drawable/edit_text_colour"
                    android:enabled="false"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/userNameButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/edit_label"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="editButtonPressed"
                    android:tag="@string/database_user_name"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="@drawable/white_border">

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:enabled="false"
                    android:textColor="@drawable/edit_text_colour"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/firstNameButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/edit_label"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="editButtonPressed"
                    android:tag="@string/database_first_name"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="@drawable/white_border">

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@drawable/edit_text_colour"
                    android:enabled="false"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/lastNameButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/edit_label"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="editButtonPressed"
                    android:tag="@string/database_last_name"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:background="@drawable/white_border">

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/enter_your_phone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:textColor="@drawable/edit_text_colour"
                    android:enabled="false"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/phoneNumberButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/edit_label"
                    android:textColor="@color/blue"
                    android:textSize="12sp"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="editButtonPressed"
                    android:tag="@string/database_phone_number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/saveUserDetailsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:onClick="confirmButtonPressed"/>

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:onClick="cancelButtonPressed" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>