<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="3">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        tools:layout="@layout/activity_maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".activities.MapsActivity"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/pickUpAddressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_address" />

        <Button
            android:id="@+id/destinationAddressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination_address" />

        <Button
            android:id="@+id/bookingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_now" />
    </LinearLayout>
</LinearLayout>