<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/historyListLinearLayout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/journeyFromLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/from"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/journeyFromTextView"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/test"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/journeyToLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/to"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/journeyToTextView"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/test"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/dateLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/date_and_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateAndTimeTextView"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/test"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">
        <TextView
            android:id="@+id/costLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/cost"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/test"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>